--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/s
   font-family: 'roboto';
   text-align: center;
   font-size: 24px;
- 
+}
 .food{
   margin-top:-500px;
   margin-right:-800px;
@@ -17,4 +17,4 @@ background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/s
   
   margin-top:500px;
   margin-left:100px;
-  }}
+  }
